docs: add development docs (#151)
* docs: add some development docs

* Apply suggestions from code review

Co-authored-by: Lukas <lukas@slucky.de>

* fix heading levels

* remove outdated files

* fix pnpm version

* copy sample env file

* fix vite nats url

* change sample tokens to strings

* fix env file path

* fix gitpod nats url

* set correct vite client port in gitpod

* use existing volar extension name

Co-authored-by: Lukas <lukas@slucky.de>

--- a/.env.sample
+++ b/.env.sample
@@ -1,18 +1,14 @@
-NODE_ENV=production
-
-# App settings
-PORT=8080
-# APP_BACKEND_URL=https://example.org
-# APP_TILE_SERVER_URL=//example.com/styles/style-name/style.json
-
+# Nats & collector settings
 LOG=debug
 
 MANAGER_SERVER=localhost
-MANAGER_TOKEN=123
+MANAGER_TOKEN=secret
 
 COLLECTOR_SERVER=localhost
-COLLECTOR_TOKEN=123
+COLLECTOR_TOKEN=secret
 
-ADMIN_TOKEN=123
+ADMIN_TOKEN=secret
 
+# PWA settings
+NODE_ENV=production
 VITE_NATS_URL=ws://localhost:4223/
