--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@iconify/json": "1.1.438",
-    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
+    "@intlify/vite-plugin-vue-i18n": "3.4.0",
     "@types/canvas-confetti": "1.4.2",
     "@types/geojson": "7946.0.8",
     "@types/node": "16.11.11",
