--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     tags:
-      - '*'
+      - "*"
   pull_request:
     branches:
       - main
@@ -25,6 +25,7 @@ jobs:
 
       - name: Login to DockerHub Registry
         run: docker login -u ${{ env.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+        if: "github.ref_type == 'tag'"
 
       - name: Push image to DockerHub
         run: docker push ${{ env.DOCKERHUB_USERNAME }}/kiel-live-kvg:latest
