--- a/app/package.json
+++ b/app/package.json
@@ -20,10 +20,12 @@
     "maplibre-gl": "2.1.9",
     "nats.ws": "1.8.0",
     "vue": "3.2.36",
+    "vue-i18n": "9.2.0-beta.29",
     "vue-router": "4.0.12"
   },
   "devDependencies": {
     "@iconify/json": "1.1.438",
+    "@intlify/vite-plugin-vue-i18n": "3.4.0",
     "@types/canvas-confetti": "1.4.2",
     "@types/geojson": "7946.0.8",
     "@types/node": "16.11.11",
