feat: improve settings page (#176)
* add lite mode view

* improve lite mode

* fix translation

* adjust bottom appbar for lite-mode

* improve settings page

* improve bottom appbar, changelog and settings page

* update lock file

* undo some unrelated changes

* move some config data

* re add size

* move version back again

--- a/app/package.json
+++ b/app/package.json
@@ -7,14 +7,15 @@
     "pnpm": "6"
   },
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
+    "start": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite",
+    "build": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite build",
     "serve": "vite preview",
     "lint": "eslint --max-warnings 0 --ext .js,.ts,.vue,.json .",
     "formatcheck": "prettier -c .",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@vueuse/core": "8.7.5",
     "canvas-confetti": "1.5.1",
     "fuse.js": "6.4.6",
     "maplibre-gl": "2.1.9",
