feat: add bus location to trip line

--- a/app/package.json
+++ b/app/package.json
@@ -15,45 +15,45 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@vueuse/core": "8.9.4",
+    "@vueuse/core": "9.2.0",
     "canvas-confetti": "1.5.1",
     "fuse.js": "6.6.2",
     "maplibre-gl": "2.1.9",
-    "nats.ws": "1.8.1",
-    "vue": "3.2.37",
-    "vue-i18n": "9.2.0-beta.29",
-    "vue-router": "4.1.2"
+    "nats.ws": "1.9.0",
+    "vue": "3.2.39",
+    "vue-i18n": "9.2.2",
+    "vue-router": "4.1.5"
   },
   "devDependencies": {
-    "@iconify/json": "2.1.81",
-    "@intlify/vite-plugin-vue-i18n": "5.0.1",
+    "@iconify/json": "2.1.104",
+    "@intlify/vite-plugin-vue-i18n": "6.0.1",
     "@types/canvas-confetti": "1.4.3",
     "@types/geojson": "7946.0.10",
-    "@types/node": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "5.30.7",
-    "@typescript-eslint/parser": "5.30.7",
-    "@vitejs/plugin-vue": "3.0.1",
-    "eslint": "8.20.0",
+    "@types/node": "18.7.16",
+    "@typescript-eslint/eslint-plugin": "5.36.2",
+    "@typescript-eslint/parser": "5.36.2",
+    "@vitejs/plugin-vue": "3.1.0",
+    "eslint": "8.23.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-simple-import-sort": "7.0.0",
-    "eslint-plugin-vue": "9.2.0",
+    "eslint-plugin-promise": "6.0.1",
+    "eslint-plugin-simple-import-sort": "8.0.0",
+    "eslint-plugin-vue": "9.4.0",
     "eslint-plugin-vue-scoped-css": "2.2.0",
     "prettier": "2.7.1",
     "surge": "0.23.1",
-    "typescript": "4.7.4",
-    "unplugin-icons": "0.14.7",
-    "unplugin-vue-components": "0.21.1",
-    "vite": "3.0.2",
-    "vite-plugin-pwa": "0.12.3",
+    "typescript": "4.8.3",
+    "unplugin-icons": "0.14.9",
+    "unplugin-vue-components": "0.22.4",
+    "vite": "3.1.0",
+    "vite-plugin-pwa": "0.12.7",
     "vite-plugin-windicss": "1.8.7",
-    "vue-eslint-parser": "9.0.3",
-    "vue-tsc": "0.39.0",
+    "vue-eslint-parser": "9.1.0",
+    "vue-tsc": "0.40.13",
     "windicss": "3.5.6",
-    "workbox-window": "6.5.3"
+    "workbox-window": "6.5.4"
   }
 }
