add sliding panel

--- a/flutter/android/app/build.gradle
+++ b/flutter/android/app/build.gradle
@@ -43,7 +43,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "de.beechy.kiellive"
+        applicationId "de.beechy.kiellive.new" // TODO: set correct app id
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         // minSdkVersion flutter.minSdkVersion
