--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   sliding_up_panel: ^2.0.0+1
 
+  location: ^4.2.0
+
   maplibre_gl:
     git:
       url: https://github.com/m0nac0/flutter-maplibre-gl.git
