--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.1 <3.0.0'
+  sdk: '>=2.18.1 <=3.0.5'
 
 dependencies:
   flutter:
@@ -14,19 +14,19 @@ dependencies:
 
   sliding_up_panel: ^2.0.0+1
 
-  location: ^4.2.0
+  location: ^4.4.0
 
   maplibre_gl:
     git:
       url: https://github.com/m0nac0/flutter-maplibre-gl.git
       ref: main
 
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 flutter:
   uses-material-design: true
