--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.1 <=3.0.5'
+  sdk: '>=2.18.1 <3.0.0'
 
 dependencies:
   flutter:
