--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,8 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@capacitor/android": "^4.3.0",
+    "@capacitor/core": "^4.3.0",
     "@vueuse/core": "9.2.0",
     "canvas-confetti": "1.5.1",
     "fuse.js": "6.6.2",
@@ -25,8 +27,9 @@
     "vue-router": "4.1.5"
   },
   "devDependencies": {
+    "@capacitor/cli": "^4.3.0",
     "@iconify/json": "2.1.104",
-    "@intlify/vite-plugin-vue-i18n": "6.0.1",
+    "@intlify/vite-plugin-vue-i18n": "6.0.3",
     "@types/canvas-confetti": "1.4.3",
     "@types/geojson": "7946.0.10",
     "@types/node": "18.7.16",
@@ -46,13 +49,13 @@
     "prettier": "2.7.1",
     "surge": "0.23.1",
     "typescript": "4.8.3",
-    "unplugin-icons": "0.14.9",
+    "unplugin-icons": "0.14.12",
     "unplugin-vue-components": "0.22.4",
-    "vite": "3.1.0",
+    "vite": "3.2.1",
     "vite-plugin-pwa": "0.12.7",
     "vite-plugin-windicss": "1.8.7",
     "vue-eslint-parser": "9.1.0",
-    "vue-tsc": "0.40.13",
+    "vue-tsc": "1.0.5",
     "windicss": "3.5.6",
     "workbox-window": "6.5.4"
   }
