--- a/app/package.json
+++ b/app/package.json
@@ -15,44 +15,44 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@vueuse/core": "9.2.0",
-    "canvas-confetti": "1.5.1",
+    "@vueuse/core": "9.10.0",
+    "canvas-confetti": "1.6.0",
     "fuse.js": "6.6.2",
-    "maplibre-gl": "2.1.9",
-    "nats.ws": "1.9.0",
-    "vue": "3.2.39",
+    "maplibre-gl": "3.0.0-pre.3",
+    "nats.ws": "1.11.2",
+    "vue": "3.2.45",
     "vue-i18n": "9.2.2",
-    "vue-router": "4.1.5"
+    "vue-router": "4.1.6"
   },
   "devDependencies": {
-    "@iconify/json": "2.1.104",
-    "@intlify/vite-plugin-vue-i18n": "6.0.1",
-    "@types/canvas-confetti": "1.4.3",
+    "@iconify/json": "2.2.1",
+    "@intlify/unplugin-vue-i18n": "0.8.1",
+    "@types/canvas-confetti": "1.6.0",
     "@types/geojson": "7946.0.10",
-    "@types/node": "18.7.16",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
-    "@vitejs/plugin-vue": "3.1.0",
-    "eslint": "8.23.0",
+    "@types/node": "18.11.18",
+    "@typescript-eslint/eslint-plugin": "5.48.0",
+    "@typescript-eslint/parser": "5.48.0",
+    "@vitejs/plugin-vue": "4.0.0",
+    "eslint": "8.31.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "8.5.0",
+    "eslint-config-prettier": "8.6.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-promise": "6.0.1",
+    "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-simple-import-sort": "8.0.0",
-    "eslint-plugin-vue": "9.4.0",
+    "eslint-plugin-vue": "9.8.0",
     "eslint-plugin-vue-scoped-css": "2.2.0",
-    "prettier": "2.7.1",
+    "prettier": "2.8.1",
     "surge": "0.23.1",
-    "typescript": "4.8.3",
-    "unplugin-icons": "0.14.9",
-    "unplugin-vue-components": "0.22.4",
-    "vite": "3.1.0",
-    "vite-plugin-pwa": "0.12.7",
-    "vite-plugin-windicss": "1.8.7",
+    "typescript": "4.9.4",
+    "unplugin-icons": "0.15.0",
+    "unplugin-vue-components": "0.22.12",
+    "vite": "4.0.4",
+    "vite-plugin-pwa": "0.14.1",
+    "vite-plugin-windicss": "1.8.10",
     "vue-eslint-parser": "9.1.0",
-    "vue-tsc": "0.40.13",
+    "vue-tsc": "1.0.19",
     "windicss": "3.5.6",
     "workbox-window": "6.5.4"
   }
