--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,9 @@
     "serve": "vite preview",
     "lint": "eslint --max-warnings 0 --ext .js,.ts,.vue,.json .",
     "formatcheck": "prettier -c .",
-    "typecheck": "vue-tsc --noEmit"
+    "typecheck": "vue-tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@vueuse/core": "9.13.0",
@@ -51,6 +53,7 @@
     "vite": "4.1.4",
     "vite-plugin-pwa": "0.14.4",
     "vite-plugin-windicss": "1.8.10",
+    "vitest": "0.28.5",
     "vue-eslint-parser": "9.1.0",
     "vue-tsc": "1.1.5",
     "windicss": "3.5.6",
