--- a/.github/workflows/check-js.yml
+++ b/.github/workflows/check-js.yml
@@ -103,3 +103,34 @@ jobs:
       - name: Check format
         run: pnpm run formatcheck
         working-directory: app
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
+
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 7
+          run_install: true
+
+      - name: Test
+        run: pnpm run test
+        working-directory: app
