chore: update to pnpm 8 (#235)

--- a/.github/workflows/check-js.yml
+++ b/.github/workflows/check-js.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "16"
 
       - name: Cache pnpm modules
         uses: actions/cache@v2
@@ -35,7 +35,7 @@ jobs:
 
       - uses: pnpm/action-setup@v2.0.1
         with:
-          version: 7
+          version: 8
           run_install: true
 
       - name: Typecheck
@@ -54,7 +54,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "16"
 
       - name: Cache pnpm modules
         uses: actions/cache@v2
@@ -66,7 +66,7 @@ jobs:
 
       - uses: pnpm/action-setup@v2.0.1
         with:
-          version: 7
+          version: 8
           run_install: true
 
       - name: Lint
@@ -85,7 +85,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "16"
 
       - name: Cache pnpm modules
         uses: actions/cache@v2
@@ -97,7 +97,7 @@ jobs:
 
       - uses: pnpm/action-setup@v2.0.1
         with:
-          version: 7
+          version: 8
           run_install: true
 
       - name: Check format
@@ -116,7 +116,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "16"
 
       - name: Cache pnpm modules
         uses: actions/cache@v2
@@ -128,7 +128,7 @@ jobs:
 
       - uses: pnpm/action-setup@v2.0.1
         with:
-          version: 7
+          version: 8
           run_install: true
 
       - name: Test
