--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,14 @@
       "mode": "debug",
       "program": "${workspaceRoot}/collectors/nextbike/",
       "cwd": "${workspaceRoot}"
+    },
+    {
+      "name": "Donkey collector",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceRoot}/collectors/donkey/",
+      "cwd": "${workspaceRoot}"
     }
   ]
 }
