improve container image building

--- a/collectors/Containerfile
+++ b/collectors/Containerfile
@@ -1,8 +1,9 @@
-FROM golang:1.20.1-alpine AS build
+FROM golang:1.20-alpine AS build
 
+ARG COLLECTOR_NAME
 WORKDIR /src/
 COPY . /src/
-RUN cd /src/collectors/kvg && CGO_ENABLED=0 go build -o /bin/collector
+RUN cd /src/collectors/$COLLECTOR_NAME && CGO_ENABLED=0 go build -o /bin/collector
 
 FROM scratch
 COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
