--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -12,6 +12,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
+  IMAGE_OWNER: ${{ github.repository_owner }}
 
 jobs:
   build-collector-images:
@@ -31,7 +32,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/kiel-live/${{ matrix.collector }}-collector
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/${{ matrix.collector }}-collector
           tags: |
             type=ref,event=tag
             type=ref,event=pr
