correct tag name

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -36,7 +36,7 @@ jobs:
           tags: |
             type=ref,event=tag
             type=ref,event=pr
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=next,enable={{is_default_branch}}
 
       - name: Login to registry
         if: github.event_name != 'pull_request'
