chore: update dependencies

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -12,10 +12,10 @@
     "skipLibCheck": true,
     "lib": ["esnext", "dom"],
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
     },
     "types": ["vite/client", "unplugin-icons/types/vue", "vite-plugin-pwa/client"],
-    "isolatedModules": true
+    "isolatedModules": true,
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "components.d.ts"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "components.d.ts"],
 }
