--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "author": "kiel-live.github.io Team",
   "version": "0.0.0",
   "engines": {
-    "node": "14 || 16 || 18",
+    "node": "18 || 20",
     "pnpm": "8"
   },
   "scripts": {
@@ -17,45 +17,45 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@vueuse/core": "9.13.0",
-    "canvas-confetti": "1.6.0",
-    "fuse.js": "6.6.2",
-    "maplibre-gl": "3.0.0-pre.3",
-    "nats.ws": "1.13.1",
-    "vue": "3.2.47",
-    "vue-i18n": "9.2.2",
-    "vue-router": "4.1.6"
+    "@vueuse/core": "10.7.2",
+    "canvas-confetti": "1.9.2",
+    "fuse.js": "7.0.0",
+    "maplibre-gl": "3.6.2",
+    "nats.ws": "1.19.1",
+    "vue": "3.4.15",
+    "vue-i18n": "9.9.0",
+    "vue-router": "4.2.5"
   },
   "devDependencies": {
-    "@iconify/json": "2.2.25",
-    "@intlify/unplugin-vue-i18n": "0.8.2",
-    "@types/canvas-confetti": "1.6.0",
-    "@types/geojson": "7946.0.10",
-    "@types/node": "18.14.0",
-    "@typescript-eslint/eslint-plugin": "5.53.0",
-    "@typescript-eslint/parser": "5.53.0",
-    "@vitejs/plugin-vue": "4.0.0",
-    "eslint": "8.34.0",
+    "@iconify/json": "2.2.175",
+    "@intlify/unplugin-vue-i18n": "2.0.0",
+    "@types/canvas-confetti": "1.6.4",
+    "@types/geojson": "7946.0.13",
+    "@types/node": "20.11.9",
+    "@typescript-eslint/eslint-plugin": "6.19.1",
+    "@typescript-eslint/parser": "6.19.1",
+    "@vitejs/plugin-vue": "5.0.3",
+    "eslint": "8.56.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-simple-import-sort": "10.0.0",
-    "eslint-plugin-vue": "9.9.0",
-    "eslint-plugin-vue-scoped-css": "2.4.0",
-    "prettier": "2.8.4",
-    "typescript": "4.9.5",
-    "unplugin-icons": "0.15.3",
-    "unplugin-vue-components": "0.24.0",
-    "vite": "4.1.4",
-    "vite-plugin-pwa": "0.14.4",
-    "vite-plugin-windicss": "1.8.10",
-    "vitest": "0.28.5",
-    "vue-eslint-parser": "9.1.0",
-    "vue-tsc": "1.1.5",
+    "eslint-plugin-vue": "9.20.1",
+    "eslint-plugin-vue-scoped-css": "2.7.2",
+    "prettier": "3.2.4",
+    "typescript": "5.3.3",
+    "unplugin-icons": "0.18.3",
+    "unplugin-vue-components": "0.26.0",
+    "vite": "5.0.12",
+    "vite-plugin-pwa": "0.17.5",
+    "vite-plugin-windicss": "1.9.3",
+    "vitest": "1.2.2",
+    "vue-eslint-parser": "9.4.2",
+    "vue-tsc": "1.8.27",
     "windicss": "3.5.6",
-    "workbox-window": "6.5.4"
+    "workbox-window": "7.0.0"
   }
 }
