--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    compileSdk 34
     defaultConfig {
         applicationId "de.beechy.kiellive"
         minSdkVersion 21
-        targetSdkVersion 33
-        versionCode 170
-        versionName "1.7.0"
+        targetSdkVersion 34
+        versionCode 171
+        versionName "1.7.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [
             hostName: "kiel-live.github.io"
