--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -14,6 +14,9 @@ on:
           - production
         required: true
         default: beta
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -39,12 +42,20 @@ jobs:
           bundle install --jobs 4 --retry 3
 
       - name: Generate gplay-key.json file
+        if: (github.event_name == 'push' && github.ref_type == 'tag') || github.event_name == 'workflow_dispatch'
         run: echo ${{secrets.GPLAY_PRIVATE_SERVICE_ACCOUNT_KEY}} | base64 -d > fastlane/gplay-key.json
 
       - name: Generate .jks file
+        if: (github.event_name == 'push' && github.ref_type == 'tag') || github.event_name == 'workflow_dispatch'
         run: echo ${{secrets.ANDROID_SIGNING_KEY}} | base64 -d > fastlane/android-keys.jks
 
-      - run: fastlane ${{ inputs.track || 'beta' }}
+      - name: Build and submit to Google Play
+        if: (github.event_name == 'push' && github.ref_type == 'tag') || github.event_name == 'workflow_dispatch'
+        run: fastlane ${{ inputs.track || 'beta' }}
         env:
           ANDROID_KEYSTORE_PASSWORD: ${{secrets.ANDROID_KEYSTORE_PASSWORD}}
           ANDROID_KEY_PASSWORD: ${{secrets.ANDROID_KEY_PASSWORD}}
+
+      - name: Build bundle
+        if: github.event_name == 'pull_request'
+        run: fastlane build
