--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
-          distribution: "temurin"
-          java-version: 21
+          distribution: "zulu"
+          java-version: 17
           cache: "gradle"
 
       - name: Setup Ruby
