--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "maplibre-gl": "4.3.2",
     "micromark": "4.0.0",
     "nats.ws": "1.25.0",
+    "vaul-vue": "^0.1.2",
     "vue": "3.4.26",
     "vue-i18n": "9.13.1",
     "vue-router": "4.3.2"
