--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,8 @@
   "author": "kiel-live.github.io Team",
   "version": "0.0.0",
   "engines": {
-    "node": "18 || 20",
-    "pnpm": "8"
+    "node": "18 || 20 || 22",
+    "pnpm": "9"
   },
   "scripts": {
     "start": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite",
@@ -21,7 +21,7 @@
     "@vueuse/core": "10.9.0",
     "canvas-confetti": "1.9.3",
     "fuse.js": "7.0.0",
-    "maplibre-gl": "4.1.3",
+    "maplibre-gl": "4.3.2",
     "micromark": "4.0.0",
     "nats.ws": "1.25.0",
     "vue": "3.4.26",
