build gtfs collector image

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -24,6 +24,7 @@ jobs:
           - kvg
           - nextbike
           - donkey
+          - gtfs
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
