--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "@kiel-live/app",
   "author": "kiel-live.github.io Team",
   "version": "0.0.0",
+  "type": "module",
   "engines": {
     "node": "18 || 20 || 22",
     "pnpm": "9"
@@ -10,7 +11,7 @@
     "start": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite",
     "build": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite build",
     "serve": "vite preview",
-    "lint": "eslint --max-warnings 0 --ext .js,.ts,.vue,.json .",
+    "lint": "eslint --max-warnings 0 .",
     "formatcheck": "prettier -c .",
     "typecheck": "vue-tsc --noEmit",
     "test": "vitest run",
@@ -18,12 +19,21 @@
     "translate": "pnpx @geprog/translator translate ./src/locales"
   },
   "dependencies": {
+    "@antfu/eslint-config": "^2.22.3",
+    "@eslint/js": "^9.7.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@intlify/eslint-plugin-vue-i18n": "^3.0.0",
+    "@types/eslint__js": "^8.42.3",
     "@vueuse/core": "10.9.0",
     "canvas-confetti": "1.9.3",
+    "eslint": "^9.7.0",
+    "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-vue-scoped-css": "^2.8.1",
     "fuse.js": "7.0.0",
     "maplibre-gl": "4.3.2",
     "micromark": "4.0.0",
     "nats.ws": "1.25.0",
+    "typescript-eslint": "^7.16.1",
     "vue": "3.4.26",
     "vue-i18n": "9.13.1",
     "vue-router": "4.3.2"
@@ -34,19 +44,7 @@
     "@types/canvas-confetti": "1.6.4",
     "@types/geojson": "7946.0.14",
     "@types/node": "20.12.8",
-    "@typescript-eslint/eslint-plugin": "6.19.1",
-    "@typescript-eslint/parser": "6.19.1",
     "@vitejs/plugin-vue": "5.0.4",
-    "eslint": "8.56.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-simple-import-sort": "12.0.0",
-    "eslint-plugin-vue": "9.21.1",
-    "eslint-plugin-vue-scoped-css": "2.7.2",
     "prettier": "3.2.5",
     "typescript": "5.4.5",
     "unplugin-icons": "0.19.0",
@@ -55,7 +53,6 @@
     "vite-plugin-pwa": "0.20.0",
     "vite-plugin-windicss": "1.9.3",
     "vitest": "1.6.0",
-    "vue-eslint-parser": "9.4.2",
     "vue-tsc": "1.8.27",
     "windicss": "3.5.6",
     "workbox-window": "7.1.0"
