--- a/collectors/Containerfile
+++ b/collectors/Containerfile
@@ -6,6 +6,7 @@ COPY . /src/
 RUN cd /src/collectors/$COLLECTOR_NAME && CGO_ENABLED=0 go build -o /bin/collector
 
 FROM scratch
+COPY --from=build /tmp /tmp
 COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=build /bin/collector /bin/collector
 ENTRYPOINT ["/bin/collector"]
