--- a/collectors/Containerfile
+++ b/collectors/Containerfile
@@ -4,8 +4,10 @@ ARG COLLECTOR_NAME
 WORKDIR /src/
 COPY . /src/
 RUN cd /src/collectors/$COLLECTOR_NAME && CGO_ENABLED=0 go build -o /bin/collector
+RUN mkdir /tmp-for-scratch
 
 FROM scratch
+COPY --from=build /tmp-for-scratch /tmp
 COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=build /bin/collector /bin/collector
 ENTRYPOINT ["/bin/collector"]
