--- a/collectors/Containerfile
+++ b/collectors/Containerfile
@@ -10,4 +10,7 @@ FROM scratch
 COPY --from=build /tmp-for-scratch /tmp
 COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=build /bin/collector /bin/collector
+COPY --from=build /usr/local/go/lib/time/zoneinfo.zip /
+ENV ZONEINFO=/zoneinfo.zip
+
 ENTRYPOINT ["/bin/collector"]
