--- a/app/package.json
+++ b/app/package.json
@@ -30,23 +30,22 @@
     "vue-router": "4.4.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.3.2",
-    "@eslint/js": "^9.7.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@antfu/eslint-config": "3.4.1",
+    "@eslint/js": "9.10.0",
+    "@ianvs/prettier-plugin-sort-imports": "4.3.1",
     "@iconify/json": "2.2.245",
-    "@intlify/eslint-plugin-vue-i18n": "^3.0.0",
+    "@intlify/eslint-plugin-vue-i18n": "3.0.0",
     "@intlify/unplugin-vue-i18n": "4.0.0",
     "@types/canvas-confetti": "1.6.4",
-    "@types/eslint__js": "^8.42.3",
+    "@types/eslint__js": "8.42.3",
     "@types/geojson": "7946.0.14",
     "@types/node": "20.12.8",
     "@vitejs/plugin-vue": "5.1.3",
-    "eslint": "^9.10.0",
-    "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-vue-scoped-css": "^2.8.1",
+    "eslint": "9.10.0",
+    "eslint-plugin-promise": "7.1.0",
+    "eslint-plugin-vue-scoped-css": "2.8.1",
     "prettier": "3.3.3",
-    "typescript": "5.4.5",
-    "typescript-eslint": "^7.18.0",
+    "typescript": "5.5.4",
     "unplugin-icons": "0.19.3",
     "unplugin-vue-components": "0.27.4",
     "vite": "5.4.3",
