--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "@kiel-live/app",
   "author": "kiel-live.github.io Team",
   "version": "0.0.0",
+  "type": "module",
   "engines": {
     "node": "18 || 20 || 22",
     "pnpm": "9"
@@ -10,7 +11,7 @@
     "start": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite",
     "build": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite build",
     "serve": "vite preview",
-    "lint": "eslint --max-warnings 0 --ext .js,.ts,.vue,.json .",
+    "lint": "eslint --max-warnings 0 .",
     "formatcheck": "prettier -c .",
     "typecheck": "vue-tsc --noEmit",
     "test": "vitest run",
@@ -29,33 +30,27 @@
     "vue-router": "4.4.3"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "3.4.1",
+    "@eslint/js": "9.10.0",
     "@iconify/json": "2.2.245",
+    "@intlify/eslint-plugin-vue-i18n": "3.0.0",
     "@intlify/unplugin-vue-i18n": "4.0.0",
     "@types/canvas-confetti": "1.6.4",
+    "@types/eslint__js": "8.42.3",
     "@types/geojson": "7946.0.14",
     "@types/node": "20.12.8",
-    "@typescript-eslint/eslint-plugin": "6.19.1",
-    "@typescript-eslint/parser": "6.19.1",
     "@vitejs/plugin-vue": "5.1.3",
-    "eslint": "8.56.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-simple-import-sort": "12.0.0",
-    "eslint-plugin-vue": "9.21.1",
-    "eslint-plugin-vue-scoped-css": "2.7.2",
+    "eslint": "9.10.0",
+    "eslint-plugin-promise": "7.1.0",
+    "eslint-plugin-vue-scoped-css": "2.8.1",
     "prettier": "3.3.3",
-    "typescript": "5.4.5",
+    "typescript": "5.5.4",
     "unplugin-icons": "0.19.3",
     "unplugin-vue-components": "0.27.4",
     "vite": "5.4.3",
     "vite-plugin-pwa": "0.20.5",
     "vite-plugin-windicss": "1.9.3",
     "vitest": "2.0.5",
-    "vue-eslint-parser": "9.4.3",
     "vue-tsc": "2.1.6",
     "windicss": "3.5.6",
     "workbox-window": "7.1.0"
