--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -32,5 +32,5 @@ jobs:
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
-        path: app/playwright-report/
+        path: app/test-results/
         retention-days: 30
