--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,8 +20,8 @@ jobs:
     - uses: pnpm/action-setup@v4
       with:
         version: 10
-        run_install: true
-        run_install.cwd: app
+        run_install: |
+          cwd: app
     - name: Install Playwright Browsers
       run: pnpm exec playwright install --with-deps
       working-directory: app
