--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -40,7 +40,8 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 10
-          run_install: true
+          run_install: |
+            cwd: app
 
       - name: Build 🔧
         run: pnpm build
