--- a/.github/workflows/check-js.yml
+++ b/.github/workflows/check-js.yml
@@ -37,7 +37,8 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 10
-          run_install: true
+          run_install: |
+            cwd: app
 
       - name: Typecheck
         run: pnpm run typecheck
@@ -68,7 +69,8 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 10
-          run_install: true
+          run_install: |
+            cwd: app
 
       - name: Lint
         run: pnpm run lint
@@ -99,7 +101,8 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 10
-          run_install: true
+          run_install: |
+            cwd: app
 
       - name: Check format
         run: pnpm run formatcheck
@@ -130,7 +133,8 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 10
-          run_install: true
+          run_install: |
+            cwd: app
 
       - name: Test
         run: pnpm run test
