--- a/.github/workflows/check-js.yml
+++ b/.github/workflows/check-js.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: "22"
           cache: "pnpm"
+          cache-dependency-path: app
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -57,6 +58,7 @@ jobs:
         with:
           node-version: "22"
           cache: "pnpm"
+          cache-dependency-path: app
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -84,6 +86,7 @@ jobs:
         with:
           node-version: "22"
           cache: "pnpm"
+          cache-dependency-path: app
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -111,6 +114,7 @@ jobs:
         with:
           node-version: "22"
           cache: "pnpm"
+          cache-dependency-path: app
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
