--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -25,6 +25,8 @@ jobs:
         uses: actions/checkout@v4
 
       - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: app
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
