--- a/.github/workflows/check-js.yml
+++ b/.github/workflows/check-js.yml
@@ -22,6 +22,8 @@ jobs:
           fetch-depth: 0
 
       - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: app
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -48,6 +50,8 @@ jobs:
           fetch-depth: 0
 
       - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: app
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -74,6 +78,8 @@ jobs:
           fetch-depth: 0
 
       - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: app
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -100,6 +106,8 @@ jobs:
           fetch-depth: 0
 
       - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: app
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
