--- a/.github/workflows/check-js.yml
+++ b/.github/workflows/check-js.yml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-          package_json_file: app
+          package_json_file: app/package.json
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -51,7 +51,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-          package_json_file: app
+          package_json_file: app/package.json
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -79,7 +79,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-          package_json_file: app
+          package_json_file: app/package.json
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -107,7 +107,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-          package_json_file: app
+          package_json_file: app/package.json
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
