define node version in package.json

--- a/.github/workflows/check-js.yml
+++ b/.github/workflows/check-js.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version-file: app/package.json
           cache: "pnpm"
           cache-dependency-path: app
 
@@ -56,7 +56,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version-file: app/package.json
           cache: "pnpm"
           cache-dependency-path: app
 
@@ -84,7 +84,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version-file: app/package.json
           cache: "pnpm"
           cache-dependency-path: app
 
@@ -112,7 +112,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version-file: app/package.json
           cache: "pnpm"
           cache-dependency-path: app
 
