--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version-file: app/package.json
           cache: "pnpm"
           cache-dependency-path: app
 
