--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": "18 || 20 || 22",
+    "node": "22",
     "pnpm": "10"
   },
   "scripts": {
