--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": "18 || 20 || 22",
+    "node": "22",
     "pnpm": "10"
   },
   "scripts": {
@@ -53,5 +53,6 @@
     "vue-tsc": "2.2.4",
     "windicss": "3.5.6",
     "workbox-window": "7.3.0"
-  }
+  },
+  "packageManager": "pnpm@10.5.2"
 }
