test: add frontend e2e tests (#317)

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -24,6 +24,14 @@
     /* Linting */
     "strict": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/**/*.json", "windi.config.ts", "vite.config.ts"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "src/**/*.json",
+    "windi.config.ts",
+    "vite.config.ts",
+    "playwright.config.ts"
+  ],
   "exclude": ["node_modules", "**/__tests__/**/*", "**/dist/**/*"]
 }
