--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,14 @@
   "scripts": {
     "start": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite",
     "build": "VITE_BUILD_DATE=$(date '+%d.%m.%Y %H:%M:%S') vite build",
-    "serve": "vite preview",
+    "preview": "vite preview",
     "lint": "eslint --max-warnings 0 .",
     "formatcheck": "prettier -c .",
     "typecheck": "vue-tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:e2e": "playwright test",
+    "test:e2e:update": "docker run --rm -it -v $(pwd):/app --network=host mcr.microsoft.com/playwright:v1.50.1 bash -c \"npm i -g pnpm && cd /app && pnpm run test:e2e -u\" && sudo chown -R $USER:$USER tests test-results",
     "translate": "pnpx @geprog/translator translate ./src/locales"
   },
   "dependencies": {
@@ -23,7 +25,7 @@
     "canvas-confetti": "1.9.3",
     "fuse.js": "7.1.0",
     "maplibre-gl": "5.1.1",
-    "micromark": "4.0.1",
+    "micromark": "4.0.2",
     "nats.ws": "1.30.2",
     "vue": "3.5.13",
     "vue-i18n": "11.1.1",
@@ -32,25 +34,26 @@
   "devDependencies": {
     "@antfu/eslint-config": "4.3.0",
     "@eslint/js": "9.21.0",
-    "@iconify/json": "2.2.310",
+    "@iconify/json": "2.2.311",
     "@intlify/eslint-plugin-vue-i18n": "3.2.0",
     "@intlify/unplugin-vue-i18n": "6.0.3",
+    "@playwright/test": "^1.50.1",
     "@types/canvas-confetti": "1.9.0",
     "@types/geojson": "7946.0.16",
-    "@types/node": "22.13.5",
+    "@types/node": "22.13.8",
     "@vitejs/plugin-vue": "5.2.1",
     "eslint": "9.21.0",
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-vue-scoped-css": "2.9.0",
     "prettier": "3.5.2",
-    "typescript": "5.7.3",
+    "typescript": "5.8.2",
     "unplugin-icons": "22.1.0",
-    "unplugin-vue-components": "28.4.0",
-    "vite": "6.1.1",
+    "unplugin-vue-components": "28.4.1",
+    "vite": "6.2.0",
     "vite-plugin-pwa": "0.21.1",
     "vite-plugin-windicss": "1.9.4",
-    "vitest": "3.0.6",
-    "vue-tsc": "2.2.4",
+    "vitest": "3.0.7",
+    "vue-tsc": "2.2.6",
     "windicss": "3.5.6",
     "workbox-window": "7.3.0"
   },
