--- a/.github/workflows/check-go.yml
+++ b/.github/workflows/check-go.yml
@@ -33,3 +33,17 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.64.5
+
+  unit-tests:
+    name: unit-tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.24"
+
+      - uses: actions/checkout@v4
+
+      - name: Run unit tests
+        run: |
+          go test ./... -coverprofile=coverage.out
