--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,7 @@
     "@vueuse/core": "12.7.0",
     "canvas-confetti": "1.9.4",
     "fuse.js": "7.1.0",
-    "maplibre-gl": "5.1.1",
+    "maplibre-gl": "5.14.0",
     "micromark": "4.0.2",
     "nats.ws": "1.30.3",
     "vue": "3.5.24",
@@ -51,6 +51,7 @@
     "unplugin-vue-components": "28.4.1",
     "vite": "6.4.1",
     "vite-plugin-pwa": "0.21.2",
+    "vite-plugin-static-copy": "3.1.4",
     "vite-plugin-windicss": "1.9.4",
     "vitest": "3.0.8",
     "vue-tsc": "2.2.12",
