--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": "v24.12.0",
+    "node": "24",
     "pnpm": "10"
   },
   "scripts": {
