chore: fix dependencies (#462)
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

--- a/app/package.json
+++ b/app/package.json
@@ -36,7 +36,7 @@
     "@eslint/js": "9.21.0",
     "@iconify/json": "2.2.413",
     "@intlify/eslint-plugin-vue-i18n": "4.1.0",
-    "@intlify/unplugin-vue-i18n": "11.0.1",
+    "@intlify/unplugin-vue-i18n": "11.0.3",
     "@playwright/test": "1.57.0",
     "@types/canvas-confetti": "1.9.0",
     "@types/geojson": "7946.0.16",
@@ -55,7 +55,8 @@
     "vitest": "4.0.16",
     "vue-tsc": "3.2.1",
     "windicss": "3.5.6",
-    "workbox-window": "7.3.0"
+    "workbox-build": "7.4.0",
+    "workbox-window": "7.4.0"
   },
   "packageManager": "pnpm@10.26.2+sha512.0e308ff2005fc7410366f154f625f6631ab2b16b1d2e70238444dd6ae9d630a8482d92a451144debc492416896ed16f7b114a86ec68b8404b2443869e68ffda6"
 }
