chore: set trustPolicyIgnoreAfter to 6 months

--- a/app/pnpm-workspace.yaml
+++ b/app/pnpm-workspace.yaml
@@ -1,4 +1,4 @@
-minimumReleaseAge: 1440
+minimumReleaseAge: 1440 # 1 day
 
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
@@ -8,6 +8,4 @@ strictPeerDependencies: true
 
 trustPolicy: no-downgrade
 
-trustPolicyExclude:
-  - synckit@0.10.4
-  - semver@6.3.1
+trustPolicyIgnoreAfter: 262980 # 6 months
