chore: set 14 days minimum release age

--- a/renovate.json
+++ b/renovate.json
@@ -18,6 +18,7 @@
     "automerge": false
   },
   "automerge": true,
+  "minimumReleaseAge": "14 days",
   "customManagers": [
     {
       "customType": "regex",
