update test script

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -32,7 +32,7 @@ jobs:
       working-directory: app
 
     - name: Run Playwright tests
-      run: pnpm exec playwright test
+      run: pnpm run test:e2e
       working-directory: app
 
     - uses: actions/upload-artifact@v6
